# chatbot

./: .coverage  .gitignore  CLI互动式小说游戏调研与设计方案.md  README.md  config.yaml  pyproject.toml  交互界面与操作按钮分析.md
homebrew-tavern/: generate-resources.sh  release-homebrew.sh  update-formula-for-tag.sh
homebrew-tavern/Formula/: tavern-game.rb
src/tavern/: __main__.py
src/tavern.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/tavern_game.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_bugfixes.py  test_integration.py  test_main.py
tests/cli/: test_app_dialogue.py  test_app_hints.py  test_app_memory.py  test_app_save.py  test_app_story.py  test_bootstrap.py  test_config_discovery.py  test_renderer.py  test_renderer_get_input.py  test_renderer_markdown.py
tests/content/: test_conditions.py  test_content_loading.py  test_loader.py
tests/dialogue/: test_context.py  test_manager.py  test_prompts.py
tests/engine/: conftest.py  test_action_defs.py  test_action_handlers.py  test_action_registry.py  test_command_defs.py  test_commands.py  test_effects.py  test_fsm.py  test_game_logger.py  test_journal_command.py  test_keybinding_bridge.py  test_keybindings.py  test_modes_dialogue.py  test_modes_exploring.py  test_new_conditions.py  test_notifications.py  test_quest_abandonment.py  test_rules.py  test_rules_use.py  test_seeded_rng.py  test_story.py  test_story_conditions.py  test_story_conditions_str.py  test_use_effects.py
tests/llm/: test_adapter.py  test_anthropic_llm.py  test_ollama_llm.py  (+2 more)
(+149 files in other folders)
